--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,23 @@
               <goal>process-asciidoc</goal>
             </goals>
             <configuration>
-              <backend>html5</backend>
+              <outputDirectory>src/main/resources</outputDirectory>
+              <backend>pdf</backend>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.asciidoctor</groupId>
+        <artifactId>asciidoctor-maven-plugin</artifactId>
+        <version>1.5.5</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoctorj-pdf</artifactId>
+            <version>1.5.0-alpha.15</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
 
