--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
               <goal>process-asciidoc</goal>
             </goals>
             <configuration>
-              <outputDirectory>src/main/resources</outputDirectory>
+              <outputDirectory>doc</outputDirectory>
               <backend>pdf</backend>
             </configuration>
           </execution>
